[gd_scene format=3 uid="uid://lpnydhxpayae"]

[ext_resource type="Script" uid="uid://b8og07w37hj84" path="res://player.gd" id="1_script"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radius = 0.3
height = 0.6

[node name="Player" type="CharacterBody3D" unique_id=1547108088]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_script")
dash_force = 100.0
max_fov_change = 30.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=529467504]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.10359353)
shape = SubResource("CapsuleShape3D_1")

[node name="BodyMesh" type="MeshInstance3D" parent="." unique_id=1060403243]
transform = Transform3D(0.5750897, 0, 0, 0, 0.5750897, 0, 0, 0, 0.5750897, 0, 0.53848314, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="HeadMesh" type="MeshInstance3D" parent="." unique_id=1710070073]
transform = Transform3D(0.8344968, 0, 0, 0, 0.8344968, 0, 0, 0, 0.8344968, 0, 1.4027929, 0)
mesh = SubResource("SphereMesh_1")

[node name="Camera3D" type="Camera3D" parent="." unique_id=591563879]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3714169, -0.49534106)

[node name="ThrowPoint" type="Marker3D" parent="Camera3D" unique_id=1163118203]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="InteractionRay" type="RayCast3D" parent="Camera3D" unique_id=770355993]
target_position = Vector3(0, 0, -3)
collision_mask = 4

[node name="HeldMaskVisual" type="MeshInstance3D" parent="Camera3D" unique_id=311539305]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.2, 0.3, -0.2, -0.5)
visible = false
mesh = SubResource("CapsuleMesh_1")

[node name="UI" type="CanvasLayer" parent="." unique_id=123456789]

[node name="Crosshair" type="ColorRect" parent="UI" unique_id=987654321]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.5)
